2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/ExternalTestRunner.cs: Fix bug #440929 - Exception when
	running single test fixture that contains no tests.

	* MonoDevelop.NUnit.mdp: Added stetic file.

	* Makefile.am: Fix support for makefile parallel build.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopNUnit.addin.xml: Bump MD version.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelopNUnit.addin.xml, Services/WorkspaceTestGroup.cs,
	  Services/NUnitService.cs, Services/SolutionFolderTestGroup.cs,
	  Gui/TestResultsPad.cs, Gui/TestPad.cs: Use a simple lazy singleton
	  instead of an IService.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitProjectTestSuite.cs: Track api changes.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs,
	  Gui/NUnitAssemblyGroupNodeBuilder.cs, Gui/TestNodeBuilder.cs,
	  Gui/TestAssemblyNodeBuilder.cs, Gui/TestPad.cs: Moved the
	  extensible tree view to its own directory.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* Services/NUnitProjectTestSuite.cs: Translated old code to new dom.

2008-07-25  Peter Johanson <peter@peterjohanson.com> 

	* Services/ExternalTestRunner.cs: Prevent an ArgumentOutOfRange
	  exception if we are running a UnitTestGroup node.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/NUnitAssemblyGroupFileFormat.cs,
	  Project/NUnitAssemblyGroupProject.cs, Project/TestAssembly.cs,
	  Services/NUnitOptions.cs, Services/UnitTest.cs: Moved serialization
	  engine to MonoDevelop.Core. Use new syntax for specifying attribute
	  scope.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitAssemblyTestSuite.cs: When counting test cases, ensure